--- a/news21national/templates/n21alpha/multimedia/photo.html
+++ b/news21national/templates/n21alpha/multimedia/photo.html
@@ -76,7 +76,7 @@
 		<br/>
 	
 		<p>
-			<label>GeoTag: {{ geotag.point }}</label>
+			<label>GeoTag:  <br/><span id="geotag_point">{{ geotag.point.x|default:"-98.6" }} , {{ geotag.point.y|default:"38.5" }}</span><input type="hidden" id="id_geo_tag_lat" name="geo_tag_lat" value="{{ geotag.point.y|default:"38.5" }}"><input type="hidden" id="id_geo_tag_lon" name="geo_tag_lon" value="{{ geotag.point.x|default:"-98.6" }}"></label>
 			<div id="map" class="smallmap"></div>
 		</p>
 	
@@ -233,8 +233,9 @@
 	var map;
     function init() {
         map = new OpenLayers.Map('map');
-		var lon = -98.6;
-		var lat = 38.5;
+		var lon = {{ geotag.point.x|default:"-98.6" }};
+		var lat = {{ geotag.point.y|default:"38.5" }};
+		
 		var zoom = 3;
         var ghyb = new OpenLayers.Layer.Google(
             "Google Hybrid",
@@ -253,6 +254,14 @@
 		var icon = new OpenLayers.Icon('http://maps.google.com/mapfiles/ms/micons/red-dot.png',size,offset);
 		markers.addMarker(new OpenLayers.Marker(new OpenLayers.LonLat(lon, lat),icon));
 
+		map.events.register("click", map, function(e) { 
+			markers.clearMarkers()
+			var lonlat = map.getLonLatFromViewPortPx(e.xy);
+			$("#geotag_point").html(lonlat.lon+' , '+lonlat.lat)
+			$("#id_geo_tag_lat").val(lonlat.lat)
+			$("#id_geo_tag_lon").val(lonlat.lon)
+			markers.addMarker(new OpenLayers.Marker(new OpenLayers.LonLat(lonlat.lon,lonlat.lat),icon.clone()));
+		});
     }
 	
 	init();
