--- a/news21national/templates/n21alpha/partner/budget.html
+++ b/news21national/templates/n21alpha/partner/budget.html
@@ -18,9 +18,7 @@
 			<span class="bold">Primay Image:</span> {{story.primary_image}}<br/>
 			<span class="bold">Summary:</span> {{story.summary}}<br/>
 			<span class="bold">Reporting Process:</span> {{story.process}}<br/>
-			{% comment %}
-			<span class="bold">Authors:</span> {% for author in story.authors %}{{author}}{% endfor %}
-			{% endcomment %}
+			<span class="bold">Authors:</span> {{ story.story_authors }}
 		</div>
 		
 		<br/><br/>
