added tab delim

--- a/news21national/templates/n21alpha/multimedia/video.html
+++ b/news21national/templates/n21alpha/multimedia/video.html
@@ -26,6 +26,7 @@
 				{% if multimedia.video %}
 				<a rel="shadowbox[Mixed];" href="{{ multimedia.video.url }}"><span class="icon-mplayer"></span> PREVIEW VIDEO</a>
 				<br/><br/>
+				<a href="{{ multimedia.video.url }}">VIDEO IS ON AMS SERVER {{ multimedia.video.url }} (right-click save as)</a>
 				{% endif %}
 				If video is over 40MB please use the filename <strong>news21v{{ multimedia.id }}.(mov or m4v)</strong> for the HQ File
 			</div>
